--- a/src/main/resources/hello.fxml
+++ b/src/main/resources/hello.fxml
@@ -32,6 +32,7 @@
             <Insets left="20.0" right="20.0"/>
          </VBox.margin>
       </TextField>
+      <Label fx:id="lblErrorDistance"/>
    </VBox>
    <VBox alignment="CENTER" layoutY="125.0" prefHeight="62.0" prefWidth="341.0"
          AnchorPane.bottomAnchor="350.3333333333333" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0"
@@ -46,16 +47,17 @@
             <Insets/>
          </opaqueInsets>
          <VBox.margin>
-            <Insets bottom="30.0" left="20.0" right="20.0"/>
+            <Insets left="20.0" right="20.0"/>
          </VBox.margin>
       </TextField>
+      <Label fx:id="lblErrorFuel"/>
    </VBox>
-   <VBox alignment="CENTER" layoutY="186.0" prefHeight="55.0" prefWidth="341.0"
+   <VBox alignment="CENTER" layoutY="186.0" prefHeight="55.0" prefWidth="341.0 "
          AnchorPane.bottomAnchor="297.33333333333337" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0"
          AnchorPane.topAnchor="186.0">
       <Button fx:id="btnCalculate" mnemonicParsing="false" text="%calculate_fuel_consumption" onAction="#handleCalculateFuel">
          <VBox.margin>
-            <Insets bottom="10.0"/>
+            <Insets bottom="10.0" top="15.0"/>
          </VBox.margin>
       </Button>
       <HBox alignment="CENTER" fx:id="hbox">
